# CylinderWorks

./: README.md  cylinderworks.7z  pubspec.yaml
.github/: copilot-instructions.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  egl_context.cpp  egl_context.h  engine_renderer.cpp  engine_renderer.h  grid_plane.cpp  jni_bridge.cpp  math_types.h
android/app/src/main/kotlin/com/example/cylinderworks/: MainActivity.kt
android/app/src/main/kotlin/com/example/cylinderworks/engine/: EngineControlRegistry.kt  EngineDiagnosticsRegistry.kt  EngineRendererView.kt  EngineRendererViewFactory.kt  NativeBridge.kt
assets/3d/: Assem1.glb  SHAFT.glb  crankshaft.glb  pin.glb  propeller.glb  retainer.glb  valve_spring_retainer.glb
assets/engine/: Assem1.xml  Assem1_error.txt  assembly.json
assets/engine/parts/: VALVE.glb  camshaft.glb  connecting_rod.glb  cover.glb  driving_gear.glb  gear.glb  piston.glb  rocker_arm.glb  rod.glb  valve_subassemble.glb
assets/engine/parts/.STEP/: SHAFT_Default_sldprt.STEP  VALVE_Default_sldprt.STEP  camshaft_Default_sldprt.STEP  connecting rod_Default_sldprt.STEP  cover_Default_sldprt.STEP  crankshaft_Default_sldprt.STEP  driving gear_Default_sldprt.STEP  gear_Default_sldprt.STEP  pin_Default_sldprt.STEP  piston_Default_sldprt.STEP  propeller_Default_sldprt.STEP  retainer_Default_sldprt.STEP  rocker arm_Default_sldprt.STEP  rod_Default_sldprt.STEP  valve spring retainer_Default_sldprt.STEP
docs/: ARCHITECTURE.md  EXAMPLE_ENGINE_CONTROL_PANEL.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  UI_BEFORE_AFTER_COMPARISON.md  UI_DESIGN_SYSTEM_STUDY.md  UI_IMPLEMENTATION_GUIDE.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/native/: engine_renderer_bindings.dart  engine_renderer_view.dart
lib/theme/: app_theme.dart  design_tokens.dart  theme_extensions.dart
lib/ui/: monitoring_overlay.dart  rpm_test_panel.dart
lib/ui/components/: components.dart  info_line.dart  info_panel.dart  metric_tile.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/engine/core/: CMakeLists.txt  assembly_types.h  camera.cpp  camera.h  diagnostics.h  engine_assembly.cpp  engine_assembly.h  gltf_loader.cpp  gltf_loader.h  grid_plane.h  json_utils.cpp  json_utils.h  kinematics_system.cpp  kinematics_system.h  math_types.h  mesh.cpp  mesh.h  physics_stub.cpp  physics_stub.h  shader_program.cpp  shader_program.h
native/engine/platform/android/: CMakeLists.txt  egl_context.cpp  egl_context.h  engine_renderer.cpp  engine_renderer.h  jni_bridge.cpp
tool/: simscape_to_assembly.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
